--- a/templates/index.html
+++ b/templates/index.html
@@ -176,7 +176,7 @@
                 <span>Physik</span>
             </div>
         </div>
-        <a href="/download">
+        <a href="/antworten/download">
             <button>⬇️ Big Body Datei herunterladen</button>
         </a>
         <p class="file-size">Dateigröße: ca. 1 TB 💾</p>
