--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
             gap: 20px;
             flex-wrap: wrap;
             justify-content: center;
-            margin: 20px 0;
+            margin: 20px 0 40px;
             animation: crank 14s ease-in-out infinite alternate;
         }
 
@@ -123,6 +123,7 @@
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
             transition: all 0.3s ease;
             animation: crank 10s ease-in-out infinite alternate;
+            margin-top: 20px;
         }
 
         button:hover {
