--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,9 @@
             <div class="subject">Sozialkunde (G/W)</div>
             <div class="subject">Wirtschaft</div>
         </div>
-        <button>⬇️ Datei herunterladen</button>
+        <a href="/antworten/download">
+            <button>⬇️ Datei herunterladen</button>
+        </a>
         <p class="file-size">Dateigröße: ca. 1 TB 💾</p>
     </main>
     <footer>
