--- a/templates/index.html
+++ b/templates/index.html
@@ -191,38 +191,38 @@
 </head>
 <body>
     <header>
-        <h1>Stk Hallë</h1>
-        <h1>LËAKËD ARCHIV</h1>
+        <h1>Stk Halle</h1>
+        <h1>LEAKED ARCHIV</h1>
     </header>
     <main>
         <div class="image-frame">
             <img src="media/Patron_with_Golden_Paw_award.jpg" alt="" width="250">
         </div>
-        <h2>Antwortën für Tësts und Klausurën 📚</h2>
-        <p>Diësës Archiv ist ëinë umfangrëichë Sammlüng vollër Wissën! Ës enthält Lösüngën für beeindruckëndë <strong>420 vërschiëdënë Prüfungsoptionën</strong>. 🌌</p>
-        <p>Achtung: Diësë Antwortën wurdën gëläakt und könntën mit hohër Wahrscheinlichkeit in dën kommëndën Prüfüngën vorkommën! 🔮</p>
+        <h2>Antworten für Tests und Klausuren 📚</h2>
+        <p>Dieses Archiv ist eine umfangreiche Sammlung voller Wissen! Es enthält Lösungen für beeindruckende <strong>420 verschiedene Prüfungsoptionen</strong>. 🌌</p>
+        <p>Achtung: Diese Antworten wurden geleakt und könnten mit hoher Wahrscheinlichkeit in den kommenden Prüfungen vorkommen! 🔮</p>
         <p class="subjects-title">Inhalt:</p>
         <div class="subjects">
-            <div class="subject">Aufnahmëtëstë</div>
-            <div class="subject">Biologië</div>
-            <div class="subject">Chëmië (T/M)</div>
-            <div class="subject">Dëutsch</div>
-            <div class="subject">Ënglisch (G/W)</div>
-            <div class="subject">Geschichtë (G/W)</div>
+            <div class="subject">Aufnahmetests</div>
+            <div class="subject">Biologie</div>
+            <div class="subject">Chemie (T/M)</div>
+            <div class="subject">Deutsch</div>
+            <div class="subject">Englisch (G/W)</div>
+            <div class="subject">Geschichte (G/W)</div>
             <div class="subject">Informatik (T/W)</div>
-            <div class="subject">Litëratur</div>
-            <div class="subject">Mathëmatik (T/W/M)</div>
+            <div class="subject">Literatur</div>
+            <div class="subject">Mathematik (T/W/M)</div>
             <div class="subject">Physik (T/M)</div>
-            <div class="subject">Sozialkundë (G/W)</div>
+            <div class="subject">Sozialkunde (G/W)</div>
             <div class="subject">Wirtschaft</div>
         </div>
         <a href="/antworten/download">
-            <button>⬇️ Datëi herunterladen</button>
+            <button>⬇️ Datei herunterladen</button>
         </a>
-        <p class="file-size">Datëigrößë: ca. 10 TB 💾</p>
+        <p class="file-size">Dateigröße: ca. 10 TB 💾</p>
     </main>
     <footer>
-        * Dër Eigentümër diësër Wëbsitë übërnimmt keinë Vërantwortung für Schäden an Ihrëm Computër, dië Sichërhëit Ihrër Datën odër dië Intëgrität Ihrër Fësstplattë nach dëm Download. 🚨
-    </footer>     
+        * Der Eigentümer dieser Website übernimmt keine Verantwortung für Schäden an Ihrem Computer, die Sicherheit Ihrer Daten oder die Integrität Ihrer Festplatte nach dem Download. 🚨
+    </footer>       
 </body>
 </html>
