Pes Patron Update

--- a/templates/index.html
+++ b/templates/index.html
@@ -196,7 +196,7 @@
     </header>
     <main>
         <div class="image-frame">
-            <img src="media/Patron_with_Golden_Paw_award.jpg" alt="" width="250">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Patron_with_Golden_Paw_award.jpg" alt="" width="250">
         </div>
         <h2>Antworten für Tests und Klausuren 📚</h2>
         <p>Dieses Archiv ist eine umfangreiche Sammlung voller Wissen! Es enthält Lösungen für beeindruckende <strong>420 verschiedene Prüfungsoptionen</strong>. 🌌</p>
